--- a/public/home/index.html
+++ b/public/home/index.html
@@ -87,7 +87,7 @@
               <a class="nav-link" href="#">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#" tabindex="-1" aria-disabled="true"
+              <a class="nav-link" href="/pilihDokter" tabindex="-1" aria-disabled="true"
                 >Appoinment</a
               >
             </li>
@@ -108,7 +108,7 @@
               <button class="dropdown-item" type="button" id="profil">
                 <i class="fa fa-user-circle-o"></i>&nbsp;&nbsp;&nbsp;Profil
               </button>
-              <button class="dropdown-item" type="button">
+              <button class="dropdown-item" type="button" id="riwayat">
                 <i class="fa fa-history"></i>&nbsp;&nbsp;&nbsp;Riwayat
               </button>
               <div class="dropdown-divider"></div>
@@ -698,7 +698,7 @@
                   </div>
                 </form> -->
                 <div class="find-doctor" style="margin-top: 96px;">
-                  <button type="button" class="btn btn-success">
+                  <button id="pilihDokter" type="button" class="btn btn-success">
                     Cari Dokter!
                   </button>
                 </div>
