--- a/public/profilDokter/index.html
+++ b/public/profilDokter/index.html
@@ -4,6 +4,12 @@
     <meta charset="utf-8" />
     <title>Klinik Tongfang</title>
 
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, maximum-scale=1"
+    /> -->
+
     <!-- Bootstrap -->
     <link
       rel="stylesheet"
@@ -51,8 +57,8 @@
     <link href="style.css" rel="stylesheet" />
 
     <!--Favicon-->
-    <link rel="shortcut icon" href="../images/favicon.ico" type="image/x-icon" />
-    <link rel="icon" href="../images/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
   </head>
 
   <body>
@@ -70,10 +76,10 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-          <a class="navbar-brand" href="/homeDokter">Klinik Tongfang</a>
+          <a class="navbar-brand" href="/home">Klinik Tongfang</a>
           <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
             <li class="nav-item active">
-              <a class="nav-link" href="/homeDokter"
+              <a class="nav-link" href="/home"
                 >Home <span class="sr-only">(current)</span></a
               >
             </li>
@@ -96,14 +102,14 @@
               Hi, { User }
             </button>
             <div class="dropdown-menu dropdown-menu-right">
-              <button class="dropdown-item" type="button">
+              <button class="dropdown-item" type="button" id="profil">
                 <i class="fa fa-user-circle-o"></i>&nbsp;&nbsp;&nbsp;Profil
               </button>
               <button class="dropdown-item" type="button">
                 <i class="fa fa-history"></i>&nbsp;&nbsp;&nbsp;Riwayat
               </button>
               <div class="dropdown-divider"></div>
-              <button id="logout" class="dropdown-item" type="button">
+              <button class="dropdown-item" type="button" id="logout">
                 <i class="fa fa-sign-out"></i>&nbsp;&nbsp;&nbsp;Log Out
               </button>
             </div>
@@ -111,35 +117,64 @@
         </div>
       </nav>
 
-      <!-- If Empty -->
-      <section id="noData" class="nodata-section" style="height: 80vh;">
-        <div class="container">
-          <!-- Stack the columns on mobile by making one full-width and the other half-width -->
-          <div class="row">
-            <div class="col-6 col-md-5">
-              <img src="../images/nodata.png" style="height: 500px;"/>
-            </div>
-            <div class="col-md-7">
-              <h1
-                style="
-                  top: 50%;
-                  position: relative;
-                  color: #f8b955;
-                  text-align: center;
-                "
-              >
-                NO DATA ENTRY
-              </h1>
-            </div>
-          </div>
-        </div>
-      </section>
+      <!-- Edit Data Diri Pasien -->
+      <section class="edit-bio-pasien-section" style="margin-bottom: 48px;">
+        <div id="alert">
 
-      <!-- Kalo ada isi -->
-      <section class="customer-list-section" style="margin-top: 30px;">
-        <div class="container-fluid">
-          <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4" id="listPasien">
-            
+        </div>
+        <center>
+          <h1 style="margin-top: 48px;">Edit Profil</h1>
+        </center>
+        <div class="container">
+          <div class="row">
+            <div class="col-sm">
+              <div class="col-lg-4 offset-md-4" style="margin-top: 24px;">
+              <!-- <form class="col-lg-4 offset-md-4" style="margin-top: 24px;"> -->
+                <div class="form-group row" style="margin-bottom: 24px;">
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="name"
+                    placeholder="Nama Lengkap"
+                  />
+                </div>
+                <div class="form-group row" style="margin-bottom: 24px;">
+                  <input
+                    type="email"
+                    class="form-control"
+                    id="email"
+                    placeholder="Email"
+                  />
+                </div>
+                <div class="form-group row" style="margin-bottom: 24px;">
+                  <input
+                    type="password"
+                    class="form-control"
+                    id="password"
+                    placeholder="Password"
+                  />
+                </div>
+                <div class="form-group row" style="margin-bottom: 128px;">
+                  <input id="datepicker" placeholder="Tanggal Lahir" />
+                  <script>
+                    $('#datepicker').datepicker({
+                      uiLibrary: 'bootstrap4',
+                    });
+                  </script>
+                </div>
+                <div class="form-group row">
+                  <button
+                    type="submit"
+                    id="btnSubmit"
+                    name="edit_bio_pasien"
+                    class="btn btn-success btn-block"
+                  >
+                    Edit
+                  </button>
+                </div>
+              <!-- </form> -->
+              </div>
+            </div>
           </div>
         </div>
       </section>
@@ -193,6 +228,6 @@
     </div>
     <!--End pagewrapper-->
 
-    <script type="text/javascript" src="script.js"></script>
+    <script type="text/javascript" src="script.js"></script>    
   </body>
 </html>
