--- a/public/home/index.html
+++ b/public/home/index.html
@@ -47,12 +47,6 @@
       type="text/css"
     />
 
-    <!-- Slick Carousel -->
-    <link rel="stylesheet" href="plugins/slick/slick.css" />
-    <link rel="stylesheet" href="plugins/slick/slick-theme.css" />
-    <!-- FancyBox -->
-    <link rel="stylesheet" href="plugins/fancybox/jquery.fancybox.min.css" />
-
     <!-- Stylesheets -->
     <link href="style.css" rel="stylesheet" />
 
@@ -82,9 +76,6 @@
               <a class="nav-link" href="/home"
                 >Home <span class="sr-only">(current)</span></a
               >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/pilihDokter" tabindex="-1" aria-disabled="true"
@@ -184,7 +175,7 @@
                     <p class="tag-text">
                       Semua pelayanan untuk semua jenis pasien.
                     </p>
-                    <a href="#" class="btn btn-main btn-white">Tentang Kami</a>
+                    <a href="#pelayananTerbaik" class="btn btn-main btn-white">Pelayanan Terbaik Kami</a>
                   </div>
                   <!-- Slide Content End-->
                 </div>
@@ -214,7 +205,7 @@
                       Pelayanan medis kami sudah tidak diragukan hingga ke
                       tingkat internasional.
                     </p>
-                    <a href="#" class="btn btn-main btn-white"
+                    <a href="#testimonitongfang" class="btn btn-main btn-white"
                       >Lihat Testimoni</a
                     >
                   </div>
@@ -253,7 +244,7 @@
                 <div class="emmergency item">
                   <i class="fa fa-phone"></i>
                   <h2>Pemanggilan Darurat</h2>
-                  <a href="#">081234567890</a>
+                  <a>081234567890</a>
                   <p>
                     Siap melayani kapanpun.
                   </p>
@@ -286,6 +277,7 @@
       <section
         class="feature-section section"
         style="margin-top: 36px; margin-bottom: 36px;"
+        id="pelayananTerbaik"
       >
         <div class="container">
           <div class="row">
@@ -302,7 +294,7 @@
                     <div class="item">
                       <div class="icon-box">
                         <figure>
-                          <a href="#">
+                          <a>
                             <img
                               src="../images/resource/11.png"
                               alt=""
@@ -323,7 +315,7 @@
                     <div class="item">
                       <div class="icon-box">
                         <figure>
-                          <a href="#">
+                          <a>
                             <img
                               src="../images/resource/22.png"
                               alt=""
@@ -344,7 +336,7 @@
                     <div class="item">
                       <div class="icon-box">
                         <figure>
-                          <a href="#">
+                          <a>
                             <img
                               src="../images/resource/33.png"
                               alt=""
@@ -364,7 +356,7 @@
                     <div class="item">
                       <div class="icon-box">
                         <figure>
-                          <a href="#">
+                          <a>
                             <img
                               src="../images/resource/44.png"
                               alt=""
@@ -394,6 +386,7 @@
       <section
         class="testimonial-section"
         style="background: url(images/testimonials/1.jpg);"
+        id="testimonitongfang"
       >
         <div class="container">
           <div class="section-title text-center">
@@ -542,7 +535,7 @@
                       </div>
                       <div
                         id="collapseOne"
-                        class="panel-collapse collapse in"
+                        class="panel-collapse collapse show"
                         role="tabpanel"
                         aria-labelledby="headingOne"
                       >
@@ -741,11 +734,11 @@
                 <ul class="pelayanan" style="list-style: none; color: white;">
                   <li>
                     <i class="fa fa-angle-right"></i>
-                    <a href="#"> Klinik Umum</a>
+                    <a > Klinik Umum</a>
                   </li>
                   <li>
                     <i class="fa fa-angle-right"></i>
-                    <a href="#">Klinik Gigi</a>
+                    <a >Klinik Gigi</a>
                   </li>
                 </ul>
               </div>
@@ -756,14 +749,6 @@
       <!--End footer-main-->
     </div>
     <!--End pagewrapper-->
-
-    <!--Scroll to top-->
-    <div class="scroll-to-top scroll-to-target" data-target=".header-top">
-      <span class="icon fa fa-angle-up"></span>
-    </div>
-
-    <!-- Google Map -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCC72vZw-6tGqFyRhhg5CkF2fqfILn2Tsw"></script>
 
     <script type="text/javascript" src="script.js"></script>    
   </body>
