--- a/public/pilihDokter/index.html
+++ b/public/pilihDokter/index.html
@@ -47,18 +47,12 @@
       type="text/css"
     />
 
-    <!-- Slick Carousel -->
-    <link rel="stylesheet" href="plugins/slick/slick.css" />
-    <link rel="stylesheet" href="plugins/slick/slick-theme.css" />
-    <!-- FancyBox -->
-    <link rel="stylesheet" href="plugins/fancybox/jquery.fancybox.min.css" />
-
     <!-- Stylesheets -->
     <link href="style.css" rel="stylesheet" />
 
     <!--Favicon-->
-    <link rel="shortcut icon" href="../images/favicon.ico" type="image/x-icon" />
-    <link rel="icon" href="../images/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="../images/logo.png" type="image/png" />
+    <link rel="icon" href="../images/logo.png" type="image/png" />
   </head>
 
   <body>
@@ -81,7 +75,6 @@
             <a class="nav-item nav-link active" href="/home"
               >Home <span class="sr-only">(current)</span></a
             >
-            <a class="nav-item nav-link" href="#">About</a>
             <a class="nav-item nav-link" href="/pilihDokter">Appointment</a>
           </div>
         </div>
@@ -100,16 +93,16 @@
               >
                 <ol class="carousel-indicators">
                   <li
-                    data-target="#carouselExampleIndicators"
+                    data-target="#carouselExampleSlidesOnly"
                     data-slide-to="0"
                     class="active"
                   ></li>
                   <li
-                    data-target="#carouselExampleIndicators"
+                    data-target="#carouselExampleSlidesOnly"
                     data-slide-to="1"
                   ></li>
                   <li
-                    data-target="#carouselExampleIndicators"
+                    data-target="#carouselExampleSlidesOnly"
                     data-slide-to="2"
                   ></li>
                 </ol>
@@ -281,11 +274,11 @@
                 <ul class="pelayanan" style="list-style: none; color: white;">
                   <li>
                     <i class="fa fa-angle-right"></i>
-                    <a href="#"> Klinik Umum</a>
+                    <a> Klinik Umum</a>
                   </li>
                   <li>
                     <i class="fa fa-angle-right"></i>
-                    <a href="#">Klinik Gigi</a>
+                    <a>Klinik Gigi</a>
                   </li>
                 </ul>
               </div>
