--- a/public/riwayat/index.html
+++ b/public/riwayat/index.html
@@ -136,7 +136,7 @@
       </section>
 
       <!-- Kalo ada isi -->
-      <section class="customer-list-section">
+      <section class="customer-list-section" style="margin-top: 30px;">
         <div class="container-fluid">
           <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4" id="listDokter">
             
