--- a/public/profil/index.html
+++ b/public/profil/index.html
@@ -160,6 +160,14 @@
                   <button
                     type="submit"
                     id="btnSubmit"
+                    name="delete_bio_pasien"
+                    class="btn btn-danger btn-block"
+                  >
+                  Hapus Akun
+                  </button>
+                  <button
+                    type="submit"
+                    id="btnSubmit"
                     name="edit_bio_pasien"
                     class="btn btn-success btn-block"
                   >
